added button for eraser form.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
 
-        <title>LELE</title>
+        <title>Caixa - Fechamento</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
@@ -40,13 +40,16 @@
     <body  class="d-flex flex-column h-100">
         <main role="main" class="flex-shrink-0">
             <div class="container">
-                <h1>Caixa</h1>
+                <h1>Caixa Fech. - Help</h1>
 
                 <form class="needs-validation" novalidate>
 
+                    <p>
+                        <button type="reset" class="btn btn-danger btn-lg btn-block">Apagar Tudo</button>
+                    </p>
                     <div class="form-group row">
                         <div class="col-4">
-                        <b>Valor</b>
+                        <b>Valor/Moeda</b>
                         </div>
                         <div class="col-4">
                             <b>Quantidade</b>
@@ -231,9 +234,6 @@
 
                     <p>
                         <button type="button" class="btn btn-primary btn-lg btn-block submit-form">Clique para Calcular</button>
-                    </p>
-                    <p>
-                        <!-- <button type="reset" class="btn btn-danger btn-lg btn-block">Apagar Tudo</button> -->
                     </p>
                 </form>
 
