a modify for header

--- a/index.html
+++ b/index.html
@@ -40,8 +40,12 @@
     <body  class="d-flex flex-column h-100">
         <main role="main" class="flex-shrink-0">
             <div class="container">
-                <h1>Caixa Fech. - Help</h1>
 
+                <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+                    <h1 class="display-4">Fechamento</h1>
+                    <h1 class="display-4">Caixa</h1>
+                    <p class="lead">Uma ajuda para o fechamento do caixa.</p>
+                  </div>
                 <form class="needs-validation" novalidate>
 
                     <p>
