--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <form class="needs-validation" novalidate>
 
                     <p>
-                        <button type="reset" class="btn btn-danger btn-lg btn-block">Apagar Tudo</button>
+                        <button type="reset" class="btn btn-danger btn-lg btn-block">Apagar Valores</button>
                     </p>
                     <div class="form-group row">
                         <div class="col-4">
