--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
                     <h1 class="display-4">Fechamento</h1>
                     <h1 class="display-4">Caixa</h1>
-                    <p class="lead">Um utiliário ajudar o fechamento do caixa.</p>
+                    <p class="lead">Um utiliário para ajudar o fechamento do caixa.</p>
                   </div>
                 <form class="needs-validation" novalidate>
 
